Fix d3 errors on IE9

--- a/wp-content/themes/theinternethealthreport/src/stylesheets/visualisations/_line.scss
+++ b/wp-content/themes/theinternethealthreport/src/stylesheets/visualisations/_line.scss
@@ -24,5 +24,9 @@
     stroke: $primary-colour;
     @include rem(stroke-width, 3);
     opacity: 0;
+
+    @at-root .line.is-active & {
+      opacity: 1;
+    }
   }
 }
